# esp32-simple

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  sdkconfig.defaults
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml  rust_ci.yml
examples/: client.rs  server.rs
examples/common/: hw.rs  logic.rs  mod.rs
src/: ble.rs  button.rs  clock.rs  color.rs  gps.rs  http.rs  infra.rs  lib.rs  light.rs  logic.rs  message.rs  thread.rs  wifi.rs
