[package]
authors = ["yrakcaz <zackaryayoun@gmail.com>"]
categories = ["embedded", "no-std", "hardware-support"]
description = "Simple ESP32 embedded library with reusable modules for BLE, Wi-Fi, HTTP, GPS, LED control, and more."
edition = "2021"
keywords = ["esp32", "embedded", "iot", "beginner", "simple"]
license = "MIT"
name = "esp32-simple"
readme = "README.md"
homepage = "https://github.com/yrakcaz/esp32-simple"
repository = "https://github.com/yrakcaz/esp32-simple.git"
documentation = "https://yrakcaz.github.io/esp32-simple/esp32_simple/"
resolver = "2"
rust-version = "1.82.0"
version = "0.1.2"

[lib]
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
anyhow = "1.0.93"
esp-idf-hal = "0.44.1"
esp32-nimble = "0.8.2"
embedded-svc = "0.28.1"
nmea = "0.7.0"

[build-dependencies]
embuild = "0.32.0"

[lints.clippy]
multiple_crate_versions = { level="allow", priority=1 }
all = "deny"
cargo = "deny"
pedantic = "deny"
